k8/kedro-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kedro-api-deployment
  namespace: mern-app
spec:
  selector:
    matchLabels:
      app: kedro-api
  replicas: 1
  template:
    metadata:
      labels:
        app: kedro-api
    spec:
      containers:
      - name: kedro-api
        image: peroxidemonke07/fantasy-kedro-api:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 5008
