k8/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-app
spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      NodePort: 30010
