k8/kedro-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kedro-api-service
  namespace: mern-app
spec:
  selector:
    app: kedro-api
  type: NodePort
  ports:
    - name: http
      port: 5008
      targetPort: 5008
      NodePort: 5008
